--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('tippy.js/dist/tippy.css');
+
+body {
+  background-color: #F5F5F5;
+}
